Cors issue resolved